--- a/laravel-api-rest-mmatamala/.env.example
+++ b/laravel-api-rest-mmatamala/.env.example
@@ -3,6 +3,13 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_FILEMAKER_DOMAIN=https://rdp2.citolab.cl
+APP_FILEMAKER_VERSION=vLatest
+APP_FILEMAKER_DATABASE=DEV
+APP_FILEMAKER_ACCOUNT=fullstack
+APP_FILEMAKER_PASSWORD=laravel
+APP_FILEMAKER_LAYOUT_NAME=contacto
+APP_FILEMAKER_RECORD_ID=1
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
